// Copyright 2025 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package tasks;

option go_package = "go.chromium.org/luci/cipd/appengine/impl/repo/tasks";

import "go.chromium.org/luci/cipd/api/cipd/v1/repo.proto";
import "go.chromium.org/luci/cipd/appengine/impl/vsa/api/software_verifier_service.proto";
import "go.chromium.org/luci/cipd/appengine/impl/vsa/api/vsa_log_entry.proto";

message CallVerifySoftwareArtifact {
  cipd.Instance instance = 1;
  cipd.impl.vsa.VerifySoftwareArtifactRequest request = 2;
  cipd.impl.vsa.VerifySoftwareArtifactLogEntry log = 3;
}
